--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Input A"
         android:id="@+id/textView"
-        android:layout_above="@+id/bField"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/aField"
+        android:layout_alignParentTop="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,7 +27,8 @@
         android:id="@+id/textView2"
         android:layout_alignBottom="@+id/bField"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/bField" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -39,10 +41,11 @@
         android:layout_toRightOf="@+id/textView"
         android:textAlignment="gravity"
         android:gravity="bottom"
+        android:focusable="true"
         android:focusableInTouchMode="true"
         android:hint="@string/aHint"
-        android:layout_alignRight="@+id/bField"
-        android:layout_alignEnd="@+id/bField" />
+        android:layout_toLeftOf="@+id/button"
+        android:layout_toStartOf="@+id/button" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -50,16 +53,16 @@
         android:inputType="number"
         android:id="@+id/bField"
         android:textSize="20dp"
-        android:layout_below="@+id/aField"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toStartOf="@+id/button"
         android:textAlignment="gravity"
+        android:focusable="true"
         android:focusableInTouchMode="true"
         android:gravity="bottom"
         android:hint="@string/bHint"
         android:ems="10"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_below="@+id/aField"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_alignRight="@+id/aField"
+        android:layout_alignEnd="@+id/aField" />
 
     <Button
         android:layout_width="wrap_content"
@@ -70,11 +73,10 @@
         android:onClick="onClick"
         android:enabled="true"
         android:textSize="30dp"
-        android:layout_below="@+id/textView2"
+        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_above="@+id/listView" />
 
     <ListView
         android:layout_width="wrap_content"
@@ -82,10 +84,10 @@
         android:id="@+id/listView"
         android:textSize="30dp"
         android:textAlignment="gravity"
-        android:layout_below="@+id/button"
-        android:layout_alignRight="@+id/bField"
-        android:layout_alignEnd="@+id/bField"
-        android:layout_marginBottom="208dp"
-        android:layout_alignParentBottom="true" />
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="295dp" />
 
 </RelativeLayout>
